@@ -451,6 +451,11 @@ BF_LONG	0x0040
 BF_SKILL	0x0100
 BF_NORMAL	0x0200
 
+ATF_SELF	0x01
+ATF_TARGET	0x02
+ATF_SHORT	0x04
+ATF_LONG	0x08
+
 IG_BlueBox	1
 IG_VioletBox	2
 IG_CardAlbum	3
