@@ -163,7 +163,7 @@ bonus2 bCriticalAddRace,n,r;		Critical + n vs. enemies of race r
 					r: 0=Formless, 1=Undead, 2=Brute, 3=Plant, 4=Insect, 5=Fish, 6=Demon, 7=Demi-Human, 8=Angel, 9=Dragon, 10=Boss monster, 11=Other than (normal monster) boss monster
 bonus2 bHPRegenRate,n,x;		Gain n HP every x milliseconds
 bonus2 bHPLossRate,n,x;			Lose n HP every x milliseconds
-bonus2 bAddEffWhenHit,n,x;		n% chance to cause x state to the enemy when
+bonus2 bAddEffWhenHit,n,x;		x/100% chance to cause n state to the enemy when
 					being hit by physical damage
 bonus2 bAddEffWhenHitShort,n,x;		n% chance to cause x state to the enemy when
 					being hit by physical close range damage
@@ -254,6 +254,13 @@ bonus2 bAddMonsterDropItemGroup,n,x;	x% chance to get an item of group type n wh
 						if 'x' is negative value, then it's a part of formula
 							chance = -x*(killed_mob_level/10)+1
 
+bonus3 bAddEff,n,x,y;			Adds a x/10000 chance to cause effect n to the target when attacking (e.g. x=100 makes 1% chance, x=10000 makes 100% chance, etc). y is the trigger criteria:
+									ATF_SELF: Trigger effect on self.
+									ATF_TARGET: Trigger effect on target (default)
+									ATF_SHORT: Trigger on melee attacks
+									ATF_LONG: Trigger in ranged attacks (default: trigger on all attacks)
+
+bonus3 bAddEffWhenHit,n,x,y;	x/10000 chance to cause n state to the enemy when being hit by physical damage. y is the trigger criteria (same as bAddEff trigger criteria).
 
 bonus3 bAddMonsterDropItemGroup,n,x,y;	y% chance to get an item of group type n when you kill a
 					monster of race x (Check db/item_group_db.txt)
